login done, invoice adding done, lamost done

--- a/src/styles/AccountCreation.scss
+++ b/src/styles/AccountCreation.scss
@@ -1,10 +1,20 @@
 .account-creating-section{
-    height: 90vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     min-width: 300px;
+    position: relative;
+    
+    button{
+        width: 180px;
+        margin: 5px 2.5px;
+    }
+    textarea, input, label{
+        width: 180px
+    }
+    
     div{
         display: flex;
         justify-content: space-between;
@@ -15,5 +25,14 @@
     .footer{
         display: flex;
         justify-content: space-evenly;
+    }
+}
+
+@media screen and (max-width: 850px) {
+    .account-creating-section{
+        div{
+            flex-direction: column;
+            margin: 0;
+        }
     }
 }
