--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,14 +1,10 @@
 :root {
-    --bg-color: #010808;
-    --text-color: #16f9f0;
-    --text-color2: #ffffff;
-    --bg-color3: #585858;
-    --bg-color4: #979797;
+    --bg-color: #979797;
   }
 .App{
     width: 100%;
-    height: 95vh;
-    background: var(--bg-color3)
+    height: auto;
+    background: var(--bg-color)
 }
 textarea{
   resize: none;
@@ -18,7 +14,9 @@ textarea{
 
 
 
+
   @import "./EntryPage.scss";
   @import "./Registration.scss";
   @import "./MainPage.scss";
   @import "./AccountCreation.scss";
+  @import "./AccountList.scss";
