--- a/src/styles/EntryPage.scss
+++ b/src/styles/EntryPage.scss
@@ -1,31 +1,45 @@
 .entry-section {
-  height: 90vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 
-
-    .login-inputs {
-      min-width: 450px;
-      margin: 0 20%;
-      text-align: center;
-      display: flex;
-      justify-content: space-evenly;
-      margin-bottom: 30px;
-      input {
-        min-width: 200px;
-      }
-    }
-    .entrypage-buttons {
-      min-width: 450px;
-      margin: 0 20%;
-      text-align: center;
-      display: flex;
-      justify-content: space-evenly;
-      button {
-        min-width: 150px;
-      }
+  .login-inputs {
+    min-width: 250px;
+    margin: 0 20%;
+    text-align: center;
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 30px;
+    input {
+      min-width: 200px;
+ 
     }
   }
+  .entrypage-buttons {
+    min-width: 200px;
+    margin: 0 20%;
+    text-align: center;
+    display: flex;
+    justify-content: space-evenly;
+    button {
+      width: 200px;
+  
+    }
+  }
+}
 
+@media screen and (max-width: 450px) {
+  div {
+    display: flex;
+    flex-direction: column;
+   
+
+    input,
+    button {
+    width: 100%;
+    margin: 2.5px 0;
+    }
+  }
+}
