--- a/src/styles/MainPage.scss
+++ b/src/styles/MainPage.scss
@@ -1,6 +1,10 @@
+.login-datas{
+  display: flex;
+  justify-content: space-between;
+}
 .mainpage-section {
   width: 100%;
-  height: 90vh;
+  height: 94vh;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -8,33 +12,10 @@
   .bg-img {
     position: absolute;
     width: 100%;
-    height: 105vh;
+    height: 94vh;
     opacity: 0.2;
   }
-
-
-  .account-creating {
-    transform: translateZ(1px);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    overflow: hidden;
-    img {
-      width: 300px;
-      height: 200px;
-      border-radius: 10px;
-      filter: grayscale(100%);
-      transition: all ease-in-out 1s;
-      &:hover {
-        transform: scale(1.15);
-        filter: grayscale(0%);
-        cursor: pointer;
-      }
-    }
-  }
-  .account-list {
+  div {
     transform: translateZ(1px);
     display: flex;
     flex-direction: column;
@@ -49,9 +30,22 @@
       filter: grayscale(100%);
       transition: all ease-in-out 1.4s;
       &:hover {
-        transform: scale(1.15);
+        transform: scale(1.05);
         filter: grayscale(0%);
         cursor: pointer;
+      }
+    }
+  }
+}
+@media screen and (max-width: 700px) {
+  .mainpage-section {
+    div {
+      h3{
+        font-size: 18px;
+      }
+      img {
+        width: 200px;
+        height: 150px;
       }
     }
   }
