--- a/src/styles/AccountCreation.scss
+++ b/src/styles/AccountCreation.scss
@@ -1,38 +1,30 @@
-.account-creating-section{
-    height: 100vh;
+.account-creating-section {
+  background-color: var(--bg-color);
+  min-width: 300px;
+  button {
+    width: 180px;
+    margin: 5px 2.5px;
+  }
+  textarea,
+  input,
+  label {
+    min-width: 180px;
+  }
+
+  div {
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
-    min-width: 300px;
-    position: relative;
-    
-    button{
-        width: 180px;
-        margin: 5px 2.5px;
-    }
-    textarea, input, label{
-        width: 180px
-    }
-    
-    div{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 20px;
-        width: 40%;
-    }
-    .footer{
-        display: flex;
-        justify-content: space-evenly;
-    }
+    margin-bottom: 20px;
+    width: 40%;
+  }
 }
 
 @media screen and (max-width: 850px) {
-    .account-creating-section{
-        div{
-            flex-direction: column;
-            margin: 0;
-        }
+  .account-creating-section {
+    div {
+      flex-direction: column;
+      margin: 0;
     }
+  }
 }
