--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,22 +1,18 @@
 :root {
-    --bg-color: #979797;
-  }
-.App{
-    width: 100%;
-    height: auto;
-    background: var(--bg-color)
+  --bg-color: #979797;
+  --bg-color2: rgb(217, 217, 217);
 }
-textarea{
+.App {
+  width: 100%;
+  height: 100vh;
+  background: var(--bg-color);
+}
+textarea {
   resize: none;
 }
 
-
-
-
-
-
-  @import "./EntryPage.scss";
-  @import "./Registration.scss";
-  @import "./MainPage.scss";
-  @import "./AccountCreation.scss";
-  @import "./AccountList.scss";
+@import "./EntryPage.scss";
+@import "./Registration.scss";
+@import "./MainPage.scss";
+@import "./AccountCreation.scss";
+@import "./ActualAccount.scss";
