--- a/src/styles/Registration.scss
+++ b/src/styles/Registration.scss
@@ -4,6 +4,9 @@
       display: flex;
       justify-content: space-between;
       margin-bottom: 30px;
+      span{
+        font-size: 12px;
+      }
     }
   }
 }
